--- a/01.Advanced OOP/03.Slider/slider.html
+++ b/01.Advanced OOP/03.Slider/slider.html
@@ -2,19 +2,20 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>JS Slider</title>
+		<title>JS OOP jQuery Slider</title>
 		<link href="style.css" type="text/css" rel="stylesheet">
 		<script type='text/javascript' src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
 		<script type='text/javascript' src="script.js"></script>
 	</head>
 	<body>
 		<div id="wrapper">
-			<h1>JS Slider</h1>
+			<h1>Slider</h1>
 			<div id="slider-conteiner">
 				<div id="left-arrow"></div>
 				<div id="right-arrow"></div>
 				<div id="slider">
 					<img id="slide-img" src="images/strawberries.png" alt="strawberries" width="565" height="240">
+					<div id="imgTitle"><h2></h2></div>
 				</div>
 				<div id="thumbs-container">
 					<ul id="thumbs-list"></ul>
