--- a/03.jQueryPlugin/treeview.html
+++ b/03.jQueryPlugin/treeview.html
@@ -4,7 +4,7 @@
 		<meta charset="utf-8">
 		<title>jQuery Treeview</title>
 		<link href="style.css" type="text/css" rel="stylesheet">
-		<script src="js/jquery-1.10.1.min.js"></script>
+		<script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 		<script type='text/javascript' src="js/script.js"></script>
 		<script type="text/javascript">
        $(document).ready(function() {
